[fe][code] Fix alignment of text-field variant

--- a/frontend/src/app/shared/components/code-input/code-input.component.scss
+++ b/frontend/src/app/shared/components/code-input/code-input.component.scss
@@ -4,6 +4,7 @@
 
   tc-code-text-field-form {
     padding: 0 40px;
+    margin: 0 auto;
   }
 
   .companion {
